Zoom tips and announcement for 1st lecture

--- a/_posts/2020-03-27-preclass.md
+++ b/_posts/2020-03-27-preclass.md
@@ -1,21 +1,21 @@
 ---
 layout: post_teaching
 title: Zoom Tips
-category: biostat257spring2020
+category: biostat200Cspring2020
 ---
 
-Welcome to Biostat 257: *Statistical Computing*. First of all and most importantly, I wish everyone stays safe and healthy during these challenging global times. Here is some essential information to get started with Biostat 257.  
+Welcome to Biostat 200C: *Methods in Biostatistics C*. First of all and most importantly, I wish everyone stays safe and healthy during these challenging global times. Here is some essential information to get started with Biostat 200C.  
 
 ## Class webpage
 
 Please bookmark and visit the course webpage frequently for the most updated information: 
-<http://ucla-biostat-257.com> or <https://ucla-biostat-257-2020spring.github.io>.
+<https://ucla-biostat-200c-2020spring.github.io>.
 
 ## Lecture format
 
-With the COVID-19 pandemic going on, there is some uncertainty in how 257 lectures are delivered. 
+With the COVID-19 pandemic going on, there is some uncertainty in how 200C lectures are delivered. 
 
-For the 1st week (Mar 31 and Apr 2), I will deliver lectures via Zoom <https://ucla.zoom.us/j/507925583> in scheduled class times (Tue/Thu 1p-2:50p).
+For the 1st week (Mar 31 and Apr 2), I will deliver lectures via Zoom <https://ucla.zoom.us/j/176728998> in scheduled class times (Tue/Thu 10am-11:50am).
 
 Depending on the feedback from the 1st week, I may make some adjustments. For example, if there are too many technical issues for real time Zoom lectures, then I may pre-record lectures and only hold discussion sessions on Zoom. 
 
