--- a/_posts/2020-03-31-week1-day1.md
+++ b/_posts/2020-03-31-week1-day1.md
@@ -1,59 +1,28 @@
 ---
 layout: post_teaching
 title: First day of class
-category: biostat257spring2020
+category: biostat200Cspring2020
 ---
 
 ## Today
 
 * Course introduction, logistics.
 
-* Computer languages.
-
-* Introduction to Julia programming.
+* Review of linear regression.
 
 ## Course material
 
-All lecture notes are Jupyter Notebooks. It is a good idea to learn by running through the code examples. You can do this in several ways. 
+All lecture notes are in RMarkdown. It is a good idea to learn by running through the code examples. You can do this in several ways. 
 
 ### Run in Binder
 
-Easiest way to run the Jupyter Notebooks is Binder, a free service that allows us to run Jupyter Notebooks in cloud. Simply follow the Binder link at <https://ucla-biostat-257-2020spring.github.io/schedule.html>. 
+Easiest way to run the Jupyter Notebooks is Binder, a free service that allows us to run Jupyter Notebooks in cloud. Simply follow the Binder link at <https://ucla-biostat-200c-2020spring.github.io/schedule.html>. 
 
 ### Run locally on your own computer
 
-1. Download and install Julia v1.4.0 from <https://julialang.org/downloads/>. On Mac, I usually use Bash command   
-```bash  
-sudo ln -s /Applications/Julia-1.4.app/Contents/Resources/julia/bin/julia /usr/local/bin/julia
-```
-to create a symbolic link so `julia` command is available anywere in the system. 
+1. Install the most recent versions of R and RStudio. 
 
-2. Git clone the course material.   
-```bash
-git clone https://github.com/ucla-biostat-257-2020spring/ucla-biostat-257-2020spring.github.io.git
-```
+2. Git clone the course material in RStudio: `File` -> `New Project...` -> `Version Control` -> `Git`. Enter `https://github.com/ucla-biostat-200c-2020spring/ucla-biostat-209c-2020spring.github.io.git` in the `Repository URL` and click `Create Project`. 
 
-3. Enter the folder `ucla-biostat-257-2020spring.github.io.git` on Terminal. 
-
-4. Open Julia within that folder, type `]` to enter the package mode, then type  
-```julia  
-activate .
-resolve
-```
-to install necessary packages. 
-
-5. In Julia REPL, type  
-```julia  
-using IJulia
-jupyterlab(dir=pwd())
-```
-to open the JupyterLab in browser.
-
-6. Course material is updated frequently. Remember to `git pull` to obtain the most recent material. 
-
-**Tip for Windows user**: Our TA Brendon is a Windows user. Feel free to consult him to configure your windows machine for open source data science tools.
-
-### JupyterHub at UCLA
-
-TBD.
+3. Course material is updated frequently. Remember to `git pull` to obtain the most recent material. 
 
