slides for linear model (review)

--- a/slides/01-intro/intro.Rmd
+++ b/slides/01-intro/intro.Rmd
@@ -29,3 +29,5 @@ where
 ## Course desciption
 
 - Read [syllabus](https://ucla-biostat-200c-2020spring.github.io/index.html) and [schedule](https://ucla-biostat-200c-2020spring.github.io/schedule.html) for a tentative list of topics and course logistics.
+
+- Teaching philosophy. Usually a GLM course is taught on blackboard/whiteboard with mostly math derivations. In this course, I will start from R code and then try to understand the theory behind it. 
