--- a/_posts/2020-03-31-week1-day1.md
+++ b/_posts/2020-03-31-week1-day1.md
@@ -16,7 +16,7 @@ All lecture notes are in RMarkdown. It is a good idea to learn by running throug
 
 ### Run in Binder
 
-Easiest way to run the Jupyter Notebooks is Binder, a free service that allows us to run Jupyter Notebooks in cloud. Simply follow the Binder link at <https://ucla-biostat-200c-2020spring.github.io/schedule.html>. 
+Easiest way is to run RStudio Binder, a free service that allows us to run Jupyter Notebooks in cloud. Simply follow the Binder link at <https://ucla-biostat-200c-2020spring.github.io/schedule.html>. 
 
 ### Run locally on your own computer
 
@@ -24,5 +24,5 @@ Easiest way to run the Jupyter Notebooks is Binder, a free service that allows u
 
 2. Git clone the course material in RStudio: `File` -> `New Project...` -> `Version Control` -> `Git`. Enter `https://github.com/ucla-biostat-200c-2020spring/ucla-biostat-209c-2020spring.github.io.git` in the `Repository URL` and click `Create Project`. 
 
-3. Course material is updated frequently. Remember to `git pull` to obtain the most recent material. 
+3. Course material is updated frequently. Remember to `git pull` to obtain the most recent material at beginning of each session. 
 
