--- a/_posts/2020-03-27-preclass.md
+++ b/_posts/2020-03-27-preclass.md
@@ -21,9 +21,9 @@ Depending on the feedback from the 1st week, I may make some adjustments. For ex
 
 ## Zoom tips
 
-- If you have not used Zoom before, please download the most recent version of Zoom and learn some bascis such as mute audio/video, raise hand, chat, virtual background (so people don't see your actual background), and so on.
+- If you have not used Zoom before, please download the most recent version of Zoom and learn some bascis such as mute and unmute audio/video, raise hand, chat, virtual background (so people don't see your actual background), and so on.
 
-- Good internect connection is critical. For example WIFI at Starbucks will not work well. Have a plan where you are going to take classes on Zoom. On campus WIFI (`UCLA-WIFI`, `EDUROAM`, etc) have good bandwidth (with good enough signal). But as of today (Mar 26, 2020), the staty-at-home order by the State and LA County is still in effect and you are **not** supposed to come to campus unless for essential functions. Please pay close attention to the COVID-19 related university announcements at <http://ucla.in/coronavirus>. 
+- Good internect connection is critical. For example WIFI at Starbucks will not work well. Have a plan where you are going to take classes on Zoom. On campus WIFI (`UCLA-WIFI`, `EDUROAM`, etc) have good bandwidth (with good enough signal). But as of today (Mar 26, 2020), the staty-at-home order by the State and LA County is still in effect and you are **not** supposed to come to campus. Please pay close attention to the COVID-19 related university announcements at <http://ucla.in/coronavirus>. 
 
   Usual residential internet service seems sufficient. For example my home has ATT 50Mbps service. My Zoom sessions usually go smooth, even with >5 devices actively streaming at the same time (I have two kids at home). 
 
@@ -35,4 +35,4 @@ Depending on the feedback from the 1st week, I may make some adjustments. For ex
 
 - Please use your real name in Zoom so others know who they are talking to.
 
-- In most lectures, I will go over the Jupyter Notebooks. It can be hard to follow the Zoom and at the same time run your own Jupyter Notebooks on the same screen. If you have separate devices, for example, an iPad, then you can use the iPad for Zoom and run Jupyter Notebooks on your laptop or PC. 
+- In most lectures, I will go over the notes in RMarkdown. It can be hard to follow the Zoom and at the same time run your own RMarkdown on the same screen. If you have separate devices, for example, an iPad, then you can use the iPad for Zoom and run RStudio on your laptop or PC. 
