--- a/_posts/2020-03-31-week1-day1.md
+++ b/_posts/2020-03-31-week1-day1.md
@@ -16,7 +16,7 @@ All lecture notes are in RMarkdown. It is a good idea to learn by running throug
 
 ### Run in Binder
 
-Easiest way is to run RStudio Binder, a free service that allows us to run Jupyter Notebooks in cloud. Simply follow the Binder link at <https://ucla-biostat-200c-2020spring.github.io/schedule.html>. 
+Easiest way is to run RStudio Binder, a free service that allows us to run Jupyter Notebooks in cloud. Simply follow the Binder link at <https://ucla-biostat-200c-2020spring.github.io/schedule/schedule.html>. 
 
 ### Run locally on your own computer
 
