--- a/_posts/2020-04-02-week1-day2.md
+++ b/_posts/2020-04-02-week1-day2.md
@@ -1,6 +1,6 @@
 ---
 layout: post_teaching
-title: First day of class
+title: Lecture 2
 category: biostat200Cspring2020
 ---
 
@@ -14,7 +14,7 @@ category: biostat200Cspring2020
 
 * Zoom recordings of lectures will be posted on CCLE: <https://ccle.ucla.edu/course/view/20S-BIOSTAT200C-1>
 
-* Zoom tips: 1. using ethernet cable may be better than WIFI, 2. turn off webcam if internet connection is not stable, 3. call in using phone may be better than using computer audio in Zoom (you can still keep Zoom). 
+* Zoom tips: 1. using ethernet cable may be better than WIFI, 2. turn off webcam if internet connection is not stable, 3. call in using phone may be better than using computer audio in Zoom (you can still keep Zoom open). 
 
 * Use RStudio to obtain course material. You can `source` the `install.R` script to install most packages needed for this class. 
 
